# ChangeLog for net-misc/youtube-dl
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.41 2009/03/23 15:16:31 ricmm Exp $

  23 Mar 2009; <ricmm@gentoo.org> metadata.xml:
  Added myself to metadata.

  20 Mar 2009; Thilo Bangert <bangert@gentoo.org>
  -youtube-dl-2008.03.08.ebuild, -youtube-dl-2008.04.07.ebuild,
  -youtube-dl-2008.04.20.ebuild, -youtube-dl-2008.06.08.ebuild,
  -youtube-dl-2008.07.26.ebuild, -youtube-dl-2008.08.09.ebuild,
  -youtube-dl-2008.09.20.ebuild, -youtube-dl-2008.10.16.ebuild:
  remove old versions

*youtube-dl-2009.03.03 (20 Mar 2009)

  20 Mar 2009; Thilo Bangert <bangert@gentoo.org>
  +youtube-dl-2009.03.03.ebuild:
  version bump - bug #246674

  20 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing agorf as a maintainer since he was retired.

*youtube-dl-2008.10.16 (25 Oct 2008)

  25 Oct 2008; Aggelos Orfanakos <agorf@gentoo.org>
  +youtube-dl-2008.10.16.ebuild:
  Version bump to 2008.10.16.

*youtube-dl-2008.09.20 (28 Sep 2008)

  28 Sep 2008; Aggelos Orfanakos <agorf@gentoo.org>
  +youtube-dl-2008.09.20.ebuild:
  Version bump to 2008.09.20.

*youtube-dl-2008.08.09 (31 Aug 2008)

  31 Aug 2008; Aggelos Orfanakos <agorf@gentoo.org>
  +youtube-dl-2008.08.09.ebuild:
  Version bump to 2008.08.09.

*youtube-dl-2008.07.26 (29 Jul 2008)

  29 Jul 2008; Ben de Groot <yngwin@gentoo.org>
  +youtube-dl-2008.07.26.ebuild:
  As agorf is away, I've taken the liberty to version bump.

*youtube-dl-2008.06.08 (12 Jun 2008)

  12 Jun 2008; <agorf@gentoo.org> +youtube-dl-2008.06.08.ebuild:
  Version bump to 2008.06.08.

  27 May 2008; Jeroen Roovers <jer@gentoo.org> youtube-dl-2008.04.20.ebuild:
  Marked ~hppa too.

  01 May 2008; Markus Meier <maekke@gentoo.org>
  youtube-dl-2008.03.22.ebuild:
  x86 stable, bug #219513

  01 May 2008; Santiago M. Mola <coldwind@gentoo.org>
  youtube-dl-2008.03.22.ebuild: