@@ -1,4 +1,6 @@
 DIST youtube-dl-2009.03.03 36011 RMD160 0ea00e912725d4ea0a9163979a7adb3ed40c2134 SHA1 7db5f786415aa69554d45c2eae5ce5d9c958b3f7 SHA256 898c82a6d072c41cea764623b7d3f905c987068e23cd51ef6faf3542a58914bf
+DIST youtube-dl-2009.04.06.tar.bz2 10457 RMD160 d1d56a0b7767c9dce3d9456262ad6f3fce11c14c SHA1 09254c36b23394e195698e06930e992a62adca0c SHA256 33db3b64ed9c2792d6f8846fe91b673d3ed8a7bd782c05e5ccfb34b48c61ac04
 EBUILD youtube-dl-2009.03.03.ebuild 649 RMD160 4091335fb26b98f49bf4512f21e57f60266683ac SHA1 7d1e916bcc4d65eac4e954c044635bd65e153912 SHA256 54779d5554ba50f72ccf8b780e1b3bff66dddf6044920d3e9353a91260b373b9
-MISC ChangeLog 5940 RMD160 e8a47c1fab95195e1c4eb0707f394c85c805db80 SHA1 0b082504e1dcb825a2529226856139ed8c28244e SHA256 8262e2b0ea55796186134714442ed15e2b033626c9731c1eaebc19cbb10d41df
+EBUILD youtube-dl-2009.04.06.ebuild 623 RMD160 f5939105a195e15241ade38657a20438d938d102 SHA1 2fedc53507f96d00767a27025ab4c6f05550bdbc SHA256 d333df62333f7d717b47743886eb24de336a273cf46f50b914c9a1465a5fb03a
+MISC ChangeLog 6306 RMD160 f4e375e7ba2ce0c030d13691a2a4bc1b51011efa SHA1 d567389dd0fdc0cb7804751b586264c0b7139016 SHA256 591a2dabab495d8ffc277e1785992d6483111e13369ddf07ea569ebdfb63c08f
 MISC metadata.xml 231 RMD160 95c7d0b77e1eee27d3a1fc7ba4b2ee4337fa66b5 SHA1 4230216fbdf2a074b348b574424124ccdb306dd8 SHA256 e0be213831fdeb499a018df3e65b5b58d076b7c421af3d24a73601f6b8c49ce8
