@@ -1,0 +1,21 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/youtube-dl-2009.04.06.ebuild,v 1.2 2009/04/23 20:29:50 patrick Exp $
+
+EAPI=2
+
+DESCRIPTION="A small command-line program to download videos from YouTube."
+HOMEPAGE="http://bitbucket.org/rg3/youtube-dl/"
+SRC_URI="http://bitbucket.org/rg3/${PN}/get/${PV}.bz2 -> ${P}.tar.bz2"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
+IUSE=""
+
+DEPEND=">=dev-lang/python-2.4"
+RDEPEND="${DEPEND}"
+
+src_install() {
+	newbin "${PN}/${PN}" ${PN}
+}
