@@ -1,6 +1,16 @@
 # ChangeLog for net-misc/youtube-dl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.41 2009/03/23 15:16:31 ricmm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.43 2009/04/23 20:29:50 patrick Exp $
+
+  23 Apr 2009; Patrick Lauer <patrick@gentoo.org> youtube-dl-2009.04.06:
+  Ok, unpacking things makes them work better. Sorry for the screwup, closes
+  #266152 again
+
+*youtube-dl-2009.04.06 (23 Apr 2009)
+
+  23 Apr 2009; Patrick Lauer <patrick@gentoo.org>
+  +youtube-dl-2009.04.06.ebuild:
+  Bump to 2009.04.06. Small SRC_URI fix, thanks to Michael. Closes #266152
 
   23 Mar 2009; <ricmm@gentoo.org> metadata.xml:
   Added myself to metadata.
